packages/forge-dsl/fixtures/errors/e24-bad-divert-target.fable
// expect: FORGE105
-> go

=== go ===
You walk on. ->
-> END
